--- a/examples/mps_prepop.html
+++ b/examples/mps_prepop.html
@@ -18,9 +18,9 @@
             $(function(){
                 var derivers = $.pivotUtilities.derivers;
 
-                $.getJSON("mps.json", function(mps) {
+                $.getJSON("mps2.json", function(mps) {
                     $("#output").pivotUI(mps, {
-                        derivedAttributes: {
+                        /*derivedAttributes: {
                             "Age Bin": derivers.bin("Age", 10),
                             "Gender Imbalance": function(mp) {
                                 return mp["Gender"] == "Male" ? 1 : -1;
@@ -30,7 +30,7 @@
                         cols: ["Party"],
                         aggregatorName: "Integer Sum",
                         vals: ["Age"],
-                        rendererName: "Heatmap"
+                        rendererName: "Heatmap"*/
                     });
                 });
              });
